--- a/src/styles/styleBase.css
+++ b/src/styles/styleBase.css
@@ -1,32 +1,106 @@
-header{
-    background-color: #6495ED;
-    padding: 15px;
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #05058a;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background:  #05058a;
+}
+::-webkit-scrollbar-thumb:active {
+  background:  #05058a;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #666666;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+header {
+    background: #000046;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        padding: 20px;
+    position: relative;
 }
 
 header ul {
     width: 90%;
     margin: 0 auto;
-    max-width: 550px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+
 }
 
-header ul li a{
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
+li {
+    float: left;
+}
+
+a {
+    color: white;
+    font-family: 'Inter';
+    font-size: 1rem;
     cursor: pointer;
+    text-decoration: none;
     text-align: center;
+    position: relative;
+    font-weight: 500;
+
 }
 
-main h2{
+a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    background: rgb(53,125,237);
+    background: linear-gradient(90deg, rgba(53,125,237,1) 0%, rgba(0,95,255,1) 48%, rgba(0,0,0,1) 100%);
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.5s ease-in-out 0s;
+    transition: all 0.5s ease-in-out 0s;
+
+
+}
+
+a:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(1);
+}
+
+
+
+
+main h2 {
     margin-top: 50px;
     text-align: center;
-    font-size: 3rem;  
+    font-size: 3rem;
 }
 
-ul{
+ul {
     display: flex;
+    justify-content: center;
     width: 80%;
     max-width: 1300px;
     margin: 50px auto;
@@ -34,29 +108,46 @@ ul{
     flex-wrap: wrap;
 }
 
-ul.container li.card{
-    border: solid 1px black;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+ul.container li.card {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: none;
+    
+    border-radius: 7px;
+    background: #C9D6FF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+,
+ Opera 12+, Safari 7+ */
+
     padding: 10px;
-    box-sizing: border-box;
+    width: 20vw;
+    height: 50vh;
 }
 
-ul.container li.card h2{
+ul.container li.card h2 {
+    color: #05058a;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-align: center;
+    font-family: 'Inter';
 }
 
-ul.container li.card h3{
-    font-size: 1.5rem;
+ul.container li.card h3 {
+    color: black;
+    font-size: 1rem;
     font-weight: bold;
     margin: 15px 0;
+    font-family: 'Inter';
 }
 
-form{
-    width: 350px;
-    border: solid 1px black;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+form {
+    font-family: 'Inter';
+    width: 25vw;
+    border: none;
+    background: #C9D6FF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #E2E2E2, #C9D6FF);
     margin: 30px auto;
     padding: 15px;
     box-sizing: border-box;
@@ -68,17 +159,25 @@ form{
     gap: 15px;
 }
 
-form h2{
+form h2 {
     font-weight: bold;
     font-size: 1.5rem;
+    font-family: 'Inter';
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-form h3{
+form h3 {
     font-weight: bold;
     font-size: 1.3rem;
+    font-family: 'Inter';
+    color: #05058a;
+    
 }
 
-form input{
+form input {
+    font-family: 'Inter';
     padding: 10px 15px;
     width: 80%;
     box-sizing: border-box;
@@ -88,8 +187,17 @@ form input{
     outline: none;
 }
 
-form button{
-    background-color: #357DED;
+p {
+    font-family: 'Inter';
+    font-size: 0.9rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+form button {
+    font-family: 'Inter';
+    background-color: #05058a;
     border: none;
     color: white;
     font-size: 1.2rem;
@@ -98,8 +206,26 @@ form button{
     border-radius: 10px;
 }
 
-form select{
+form select {
+    font-family: 'Inter';
     width: 80%;
     outline: none;
     cursor: pointer;
 }
+
+@media(max-width: 768px) {
+    ul {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    ul.container li.card {
+        width: 60%;
+    }
+
+    form {
+        width: 80vw;
+    }
+}
+
+
